# antonopen4tuto

./: .gitignore  CMakeLists.txt  README.md
shaders/: shaders.qrc
src/: main.cpp  trianglewindow.cpp  trianglewindow.h
textures/: textures.qrc
